# ucuu

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml  publish.yml  python-app.yml
tests/: conftest.py  test_ai_case_trar.py  test_decorator.py  test_wrapper.py
tests/package_utils/: __init__.py  test_print.py
ucuu/: decorator.py  log.py
